--- a/WebCam.html
+++ b/WebCam.html
@@ -60,9 +60,12 @@
             <button id="addPeerButton">Ajouter</button>
         </label>
         <label>
-            Sélectionner la caméra :
+            Caméra principale :
             <select id="cameraSelect"></select>
-            <select id="secondCameraSelect"></select> <!-- Ajout du second select pour la deuxième caméra -->
+        </label>
+        <label>
+            Caméra secondaire :
+            <select id="secondCameraSelect"></select> <!-- Ajout du select pour la deuxième caméra -->
         </label>
         <label>
             Format de la vidéo :
@@ -85,7 +88,7 @@
         let call;
         let peerSelect = document.getElementById('peerSelect');
         let cameraSelect = document.getElementById('cameraSelect');
-        let secondCameraSelect = document.getElementById('secondCameraSelect'); // Référence au second select pour la deuxième caméra
+        let secondCameraSelect = document.getElementById('secondCameraSelect'); // Référence au select pour la deuxième caméra
         let resolutionSelect = document.getElementById('resolutionSelect');
         let addPeerButton = document.getElementById('addPeerButton');
         let startVideoButton = document.getElementById('startVideoButton');
@@ -133,7 +136,7 @@
         async function getLocalStream() {
             const constraints = {
                 video: {
-                    facingMode: cameraSelect.value,
+                    facingMode: cameraSelect.value || secondCameraSelect.value, // Utilisation de la caméra sélectionnée
                     width: parseInt(resolutionSelect.value)
                 },
                 audio: true
@@ -156,13 +159,13 @@
                 const devices = await navigator.mediaDevices.enumerateDevices();
                 const videoDevices = devices.filter(device => device.kind === 'videoinput');
                 cameraSelect.innerHTML = '';
-                secondCameraSelect.innerHTML = ''; // Réinitialisation du second select
+                secondCameraSelect.innerHTML = ''; // Réinitialisation du select pour la deuxième caméra
                 videoDevices.forEach(device => {
                     const option = document.createElement('option');
                     option.value = device.deviceId;
                     option.text = device.label || `Camera ${cameraSelect.options.length + 1}`;
                     cameraSelect.appendChild(option);
-                    // Ajout de l'option au second select pour la deuxième caméra
+                    // Ajout de l'option au select pour la deuxième caméra
                     const secondOption = document.createElement('option');
                     secondOption.value = device.deviceId;
                     secondOption.text = device.label || `Camera ${secondCameraSelect.options.length + 1}`;
