--- a/WebCam_V2.html
+++ b/WebCam_V2.html
@@ -62,10 +62,7 @@
         </label>
         <label id="cameraLabel">
             Sélectionner la caméra :
-            <select id="cameraSelect">
-                <option value="0">Caméra 1</option>
-                <option value="1">Caméra 2</option>
-            </select>
+            <select id="cameraSelect"></select>
         </label>
         <label>
             Sélectionner un utilisateur :
